:bug: Fix: adjust KaTeX display overflow behavior

--- a/assets/css/_page/_single.scss
+++ b/assets/css/_page/_single.scss
@@ -496,7 +496,7 @@
     .katex-display {
       max-width: 100%;
       overflow-x: auto;
-      padding-block: 2px;
+      overflow-y: hidden;
     }
     .katex-error {
       padding: 0.14em 0.28em;
